--- a/hooks/build
+++ b/hooks/build
@@ -1,13 +1,64 @@
-#!/usr/bin/env bash
+#! /usr/bin/env bash
 
 . hooks/env
 
-arg_string=''
+echo "--- build ---"
 
-[ ! -z "${PHP_VERSION}" ] && arg_string="${arg_string} --build-arg PHP_VERSION=${PHP_VERSION}"
-[ ! -z "${TARGET_VERSION}" ] && arg_string="${arg_string} --build-arg PMA_VERSION=${TARGET_VERSION}"
+## loop through valid arches
+#
+for arch in ${build_arches}; do
+	echo "--- build (${arch}) ---"
 
-build_cmd=(docker build ${arg_string} -t ${IMAGE_NAME} .)
+	# get arch config
+	for key in ${available_keys}; do
+		var="${arch}_${key}"
+		declare "${key}=${!var}"
+	done
 
-printf '\n---\n%s\n---\n\n' "${build_cmd[*]}"
-"${build_cmd[@]}"
+	if [ -n "${SOURCE_ARCH_PREFIX}" ]; then
+		[ -n "${QEMU_ARCH}" ] \
+			&& FROM_IMAGE="${QEMU_PREFIX}/${SOURCE_IMAGE}" \
+			|| FROM_IMAGE="${SOURCE_IMAGE}"
+	else
+		ifFuncSetVar FROM_IMAGE get_get_get_get_get_get_get_get_get_get_get_get_get_from_image \
+			|| FROM_IMAGE="${SOURCE_IMAGE}-${TARGET_ARCH_TAG}"
+	fi
+
+	print_param "${FROM_IMAGE}" 'From'
+	print_param "${TARGET_TAG}" 'Target tag'
+	print_param "${QEMU_ARCH}" 'QEMU arch'
+
+	if [ -n "${DOCKERFILE_OVERRIDE+set}" ]; then
+		DOCKER_FILE="${DOCKERFILE_OVERRIDE}"
+		[ -n "${QEMU_ARCH}" ] && DOCKER_FILE="${DOCKER_FILE}.qemu"
+	fi
+	print_param "${DOCKER_FILE}" 'Dockerfile'
+
+	# prepare the build command
+	arg_string=''
+
+	arg_string="${arg_string} --build-arg FROM_IMAGE=${FROM_IMAGE}"
+
+	for arg in "${!BUILD_ARGS[@]}"; do
+		if [ -n "${!arg}" ]; then
+			print_param "${!arg}" "${BUILD_ARGS[${arg}]}"
+			arg_string="${arg_string} --build-arg ${arg}=${!arg}"
+		fi
+	done
+
+	[ -n "${QEMU_ARCH}" ] && \
+		arg_string="${arg_string} --build-arg QEMU_ARCH=${QEMU_ARCH}"
+
+	arg_string="${arg_string} -f ${DOCKER_FILE}"
+
+	build_cmd=(docker build ${arg_string} -t "${DOCKER_REPO}:${TARGET_TAG}-${TARGET_ARCH_TAG}" .)
+	pretty_build_cmd=$(echo "${build_cmd[*]}" | sed -r -e "s/(--build-arg |-f |-t )/\\\ \n\t\1/g")
+
+	printf '\n--- build command ---\n%s\n\n' "$pretty_build_cmd"
+
+	[[ -n "${NOOP+set}" || -n "${NOBUILD+set}" ]] && printf '[NOOP]\n\n' && continue
+
+	# build
+	"${build_cmd[@]}"
+	echo
+done
