--- a/hooks/arch.alpine.yaml
+++ b/hooks/arch.alpine.yaml
@@ -4,7 +4,6 @@ arm64v8:
   QEMU_ARCH: aarch64
   S6_ARCH: aarch64
   QEMU_PREFIX: arm64v8
-  DOCKER_FILE: Dockerfile.qemu
   PLATFORM: linux/arm64/v8
 
 amd64:
@@ -12,7 +11,6 @@ amd64:
   QEMU_ARCH:
   S6_ARCH: amd64
   QEMU_PREFIX: amd64
-  DOCKER_FILE: Dockerfile
   PLATFORM: linux/amd64
 
 armv6:
@@ -21,8 +19,8 @@ armv6:
   QEMU_ARCH: arm
   S6_ARCH: armhf
   QEMU_PREFIX: arm32v6
-  DOCKER_FILE: Dockerfile.qemu
-  PLATFORM: linux/arm/v6
+  PLATFORM: linux/arm
+  MANIFEST_PLATFORM: linux/arm/v6
 
 armv7:
   TARGET_ARCH_TAG: armv7
@@ -30,7 +28,6 @@ armv7:
   QEMU_ARCH: arm
   S6_ARCH: arm
   QEMU_PREFIX: arm32v7
-  DOCKER_FILE: Dockerfile.qemu
   PLATFORM: linux/arm/v7
 
 i386:
@@ -38,7 +35,6 @@ i386:
   QEMU_ARCH: i386
   S6_ARCH: x86
   QEMU_PREFIX: i386
-  DOCKER_FILE: Dockerfile.qemu
   PLATFORM: linux/386
 
 ppc64le:
@@ -46,7 +42,6 @@ ppc64le:
   QEMU_ARCH: ppc64le
   S6_ARCH: ppc64le
   QEMU_PREFIX: ppc64le
-  DOCKER_FILE: Dockerfile.qemu
   PLATFORM: linux/ppc64le
 
 s390x:
@@ -54,5 +49,4 @@ s390x:
   QEMU_ARCH: s390x
   S6_ARCH:
   QEMU_PREFIX: s390x
-  DOCKER_FILE: Dockerfile.qemu
   PLATFORM: linux/s390x
