improved build hooks, fixed database imports

--- a/build.conf
+++ b/build.conf
@@ -1,3 +1,5 @@
+# shellcheck shell=bash disable=SC2034
+
 SOURCE_REPO='moonbuggy2000/alpine-s6-nginx-php-fpm'
 
 PMA_REPO="phpmyadmin/phpmyadmin"
@@ -18,8 +20,9 @@ declare -A CHECKOUT_DISPLAY=(
 )
 
 post_checkout_start () {
-	[ -z "${PMA_LATEST+set}" ] && PMA_LATEST="$(git_latest_release "${PMA_REPO}" name)"
-	
+	[ -z "${PMA_LATEST+set}" ] \
+		&& PMA_LATEST="$(git_latest_release "${PMA_REPO}" name)"
+
 	## determine the phpMyAdmin version to install
 	if [ -z "${PMA_VERSION}" ]; then
 		local pma_tag_version
