update build hooks, use buildx, English-only build

--- a/build.conf
+++ b/build.conf
@@ -3,13 +3,16 @@
 SOURCE_REPO='moonbuggy2000/alpine-s6-nginx-php-fpm'
 
 PMA_REPO="phpmyadmin/phpmyadmin"
-PMA_CONFIG_PATH="/etc/phpmyadmin/"
+PMA_CONFIG_PATH="/etc/phpmyadmin"
 
 PHP_VERSION="7.4"
+
+BUILD_BUILDX="true"
 
 declare -A BUILD_ARGS=(
 	[PMA_VERSION]='PMA version' \
 	[PMA_CONFIG_PATH]='PMA config path' \
+	[PMA_LANGUAGES]='PMA languages' \
 	[PHP_VERSION]='PHP version' \
 )
 
@@ -36,9 +39,21 @@ post_checkout_start () {
 	add_param "${PMA_VERSION}" 'PMA_VERSION'
 	SOURCE_TAG="${PHP_VERSION}"
 	TARGET_TAG="${PMA_VERSION}"
+
+	case ${DOCKER_TAG} in
+		*english*)
+			add_param 'english' 'PMA_LANGUAGES'
+			TARGET_TAG="${TARGET_TAG}-english"
+			;;
+		*) add_param 'all-languages' 'PMA_LANGUAGES' ;;
+	esac
 }
 
 ## get manifest tags
 get_manifest_tags () {
-	[ "${PMA_VERSION}" = "${PMA_LATEST}" ] && echo 'latest'
+	if [ "${PMA_VERSION}" = "${PMA_LATEST}" ]; then
+		[ "x${PMA_LANGUAGES}" = "xenglish" ] \
+			&& echo 'english latest-english' \
+			|| echo 'latest'
+	fi
 }
