--- a/root/etc/phpmyadmin/env.ini
+++ b/root/etc/phpmyadmin/env.ini
@@ -16,3 +16,11 @@ PMA_PMADB = False
 PMA_CONTROLUSER = False
 PMA_CONTROLPASS = False
 PMA_QUERYHISTORYDB = False
+PMA_SSL = False
+PMA_SSL_KEY = '/certs/client-key.pem'
+PMA_SSL_CERT = '/certs/client-cert.pem'
+PMA_SSL_CA = '/certs/server-ca.pem'
+PMA_SSL_CA_PATH = '/certs/ca/'
+PMA_SSL_CIPHERS = NULL
+PMA_SSL_VERIFY = True
+PMA_CONSOLE_DARKTHEME = False
