--- a/hooks/arch.alpine.yaml
+++ b/hooks/arch.alpine.yaml
@@ -1,3 +1,10 @@
+amd64:
+  TARGET_ARCH_TAG: amd64
+  QEMU_ARCH:
+  S6_ARCH: amd64
+  QEMU_PREFIX: amd64
+  PLATFORM: linux/amd64
+
 arm64v8:
   TARGET_ARCH_TAG: arm64v8
   EXTRA_ARCH_TAGS: arm64
@@ -6,27 +13,17 @@ arm64v8:
   QEMU_PREFIX: arm64v8
   PLATFORM: linux/arm64/v8
 
-amd64:
-  TARGET_ARCH_TAG: amd64
-  QEMU_ARCH:
-  S6_ARCH: amd64
-  QEMU_PREFIX: amd64
-  PLATFORM: linux/amd64
-
 armv6:
   TARGET_ARCH_TAG: armv6
-  EXTRA_ARCH_TAGS: armhf
   QEMU_ARCH: arm
   S6_ARCH: armhf
   QEMU_PREFIX: arm32v6
-  PLATFORM: linux/arm
-  MANIFEST_PLATFORM: linux/arm/v6
+  PLATFORM: linux/arm/v6
 
 armv7:
   TARGET_ARCH_TAG: armv7
-  EXTRA_ARCH_TAGS: arm
   QEMU_ARCH: arm
-  S6_ARCH: arm
+  S6_ARCH: armhf
   QEMU_PREFIX: arm32v7
   PLATFORM: linux/arm/v7
 
@@ -44,9 +41,16 @@ ppc64le:
   QEMU_PREFIX: ppc64le
   PLATFORM: linux/ppc64le
 
+riscv64:
+  TARGET_ARCH_TAG: riscv64
+  QEMU_ARCH: riscv64
+  S6_ARCH: riscv64
+  QEMU_PREFIX: riscv64
+  PLATFORM: linux/riscv64
+
 s390x:
   TARGET_ARCH_TAG: s390x
   QEMU_ARCH: s390x
-  S6_ARCH:
+  S6_ARCH: s390x
   QEMU_PREFIX: s390x
   PLATFORM: linux/s390x
