fix IPv6 healthcheck; use local APK proxy if provided

--- a/build.conf
+++ b/build.conf
@@ -14,12 +14,12 @@ declare -A BUILD_ARGS=(
 	[PMA_CONFIG_PATH]='PMA config path' \
 	[PMA_LANGUAGES]='PMA languages' \
 	[PHP_VERSION]='PHP version' \
+	[APK_PROXY]='APK proxy' \
 )
 
 declare -A CHECKOUT_DISPLAY=(
 	[PHP_VERSION]='PHP version' \
-	[PMA_VERSION]='PMA version' \
-	[PMA_LATEST]='PMA latest' \
+	[APK_PROXY]='APK proxy' \
 )
 
 post_checkout_start () {
@@ -35,8 +35,8 @@ post_checkout_start () {
 			|| PMA_VERSION="${PMA_LATEST}"
 	fi
 
-	add_param "${PMA_LATEST}" 'PMA_LATEST'
-	add_param "${PMA_VERSION}" 'PMA_VERSION'
+	add_print_param "${PMA_VERSION}" 'PMA_VERSION' 'PMA version'
+	add_print_param "${PMA_LATEST}" 'PMA_LATEST' 'PMA latest'
 	SOURCE_TAG="${PHP_VERSION}"
 	TARGET_TAG="${PMA_VERSION}"
 
