updated build hooks

--- a/build.conf
+++ b/build.conf
@@ -7,7 +7,7 @@ PMA_CONFIG_PATH="/etc/phpmyadmin"
 
 PHP_VERSION="7.4"
 
-BUILD_BUILDX="true"
+BUILD_MULTIARCH="true"
 
 declare -A BUILD_ARGS=(
 	[PMA_VERSION]='PMA version' \
